# Problem-Based-SRS-Isolated-Tests

./: .gitignore  LICENSE  README.md  generate-report.ps1  pyproject.toml  run-all-tests.ps1  run-e2e-tests.ps1  run-mutation-tests.ps1  run-unit-tests.ps1  test-skill.ps1  verify-setup.ps1
.github/: copilot-instructions.md
scripts/: __init__.py  copilot_client.py  fixtures.py  skill_loader.py
tests/: __init__.py  conftest.py  test_complexity_analysis.py  test_customer_needs.py  test_customer_problems.py  test_e2e_crm.py  test_e2e_microer.py  test_functional_requirements.py  test_problem_based_srs.py  test_software_glance.py  test_software_vision.py  test_zigzag_validator.py
