[project]
name = "problem-based-srs-isolated-tests"
version = "0.1.0"
description = "Black-box test suite for Problem-Based SRS agent skills using GitHub Copilot SDK"
license = "MIT"
readme = "README.md"
authors = [
    { name = "rafael-gorski" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest-html>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -s"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
