[project]
name = "problem-based-srs-isolated-tests"
version = "0.1.0"
description = "Black-box test suite for Problem-Based SRS agent skills using GitHub Copilot SDK"
license = "MIT"
readme = "README.md"
authors = [
    { name = "rafael-gorski" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest-html>=4.0",
    "coverage>=7.4",
    "pytest-cov>=4.1",
    "mutmut>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -s"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["scripts", "tests"]
branch = true
omit = ["*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "reports/coverage"

[tool.mutmut]
paths_to_mutate = ["scripts/copilot_client.py", "scripts/fixtures.py", "scripts/skill_loader.py"]
tests_dir = ["tests/"]
